# Certi-GNC

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  CertifiableLandmark.h  CertifiablePGO.h  CertifiableProblemOpts.h  CertifiableResults.h  Certifiable_problem.h  LandmarkFactor.cpp  LandmarkFactor.h  LiftedPose.h  RandomInit.h  RelativePoseMeasurement.h  SEsyncFactor.cpp  SEsyncFactor.h  StiefelManifold-inl.h  StiefelManifold.h  utils.cpp  utils.h
cpp/robust/: CertifiableGncOptimizer.h  CertifiableGncParams.h
cpp/robust_example/: CMakeLists.txt  Certifiable_GNC_LMK_example.cpp  Certifiable_GNC_PGO_example.cpp  Vanilla_GNC_LMK_example.cpp  Vanilla_GNC_PGO_example.cpp
cpp/tests/: CMakeLists.txt  README.md  testAssemblerSimple.cpp  testDataMatrixUtils.cpp  testLandmarkFactor.cpp  testLiftedPose.cpp  testSEsyncFactor.cpp  testStiefelManifold.cpp
data/landmark/: cityTrees_reduced.g2o  cityTrees_reduced_GT.txt  cityTrees_reduced_outl20.g2o
data/pgo/: intel_GT.txt  intel_outl20.g2o
scripts/: README.md  eval_gnc_pgo.py  g2o_to_tum.py  inject_outliers.py  make_small_landmark.py  make_small_pgo.py  plotg2o.py  plottum.py  rmse.py  run_benchmark_lmk.py  run_benchmark_pgo.py  tum_to_g2o.py
